--- a/presentations/KVM-Forum-2014/index.html
+++ b/presentations/KVM-Forum-2014/index.html
@@ -265,7 +265,7 @@
 					</section>
 					<section>
 						<h3>Step 2: EFI graphics card ROM</h3>
-						<p>PCI ROMs can support muliple images</p>
+						<p>PCI ROMs can support multiple images</p>
 						<p>Most newer cards already support EFI</p>
 					</section>
 					<section>
