--- a/presentations/KVM-Forum-2014/index.html
+++ b/presentations/KVM-Forum-2014/index.html
@@ -47,15 +47,17 @@
 
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
-				<section style="width:130%; margin-left:-15%">
-<!--
-					<h2>Notice</h2>
-					<h3>This presentation is for KVM Forum 2014</h3>
-					<h3>Düsseldorf, Germany, October 14 - 16, 2014</h3>
-					<h3>Please do not advertise or share with others</h3>
-					<h3>if found prior to these dates.</h3>
-					<h3>Thank you</h3>
--->
+				<section style="width:100%; margin-left:0%">
+					<p>This presentation was given at KVM Forum</p>
+					<p>Düsseldorf, Germany, October 14 - 16, 2014</p>
+					<p>&nbsp;</p>
+					<p>Navigation</p>
+					<ul>
+						<li>Advance to next slide/element: &lt;space&gt;/&lt;pgdown&gt;</li>
+						<li>Full screen: &lt;f&gt;</li>
+						<li>Slide overview: &lt;esc&gt;</li>
+						<li>First/last slide: &lt;home&gt;/&lt;end&gt;</li>
+					</ul>
 				</section>
 				<section data-state="logo-light" data-background-image="../images/RH-Template-Background8.jpg">
 					<div style="width:130%; margin-left:-15%">
