Add link to youtube video
Signed-off-by: Alex Williamson <alex.williamson@redhat.com>

--- a/presentations/KVM-Forum-2014/index.html
+++ b/presentations/KVM-Forum-2014/index.html
@@ -50,6 +50,7 @@
 				<section style="width:100%; margin-left:0%">
 					<p>This presentation was given at KVM Forum</p>
 					<p>Düsseldorf, Germany, October 14 - 16, 2014</p>
+					<p><a href="https://www.youtube.com/watch?v=NhZ9eIpg2nM">(video link)</a></p>
 					<p>&nbsp;</p>
 					<p>Navigation</p>
 					<ul>
