minor corrections to xml
Signed-off-by: Alex Williamson <alex.williamson@redhat.com>

--- a/presentations/HP-Virt-Tuning-Opt-2014/index.html
+++ b/presentations/HP-Virt-Tuning-Opt-2014/index.html
@@ -338,7 +338,7 @@
           &lt;source network='default'/&gt;
           &lt;model type='virtio'/&gt;
           &lt;driver name='vhost' queues='N'/&gt;
-    &lt;interface&gt; </code></pre>
+    &lt;/interface&gt; </code></pre>
 								</div>
 								<div style="width:70%; margin-left:15%">
 <pre><code> # ethtool -L eth0 combined M </code></pre>
@@ -362,7 +362,7 @@
 								<div style="width:100%">
 <pre><code>    &lt;controller type='scsi' index='0' model='virtio-scsi'&gt;
       &lt;driver queues='N'/&gt;
-    &lt;controller&gt;
+    &lt;/controller&gt;
 </code></pre>
 								</div>
 						</ul>
